RESOLVED FIXED28035
Bad rendering of web page because of image's height is set to 100%
https://bugs.webkit.org/show_bug.cgi?id=28035
Summary Bad rendering of web page because of image's height is set to 100%
jasneet
Reported 2009-08-05 17:09:05 PDT
Created attachment 34193 [details] reduced testcase I Steps: Go to http://rapid.tvphp.net/?q=margulis+%22professional+photoshop%22 II Issue: The entries are successively further and further to the right and the red arrows appear much to large as a kind of backdrop. III Conclusion: The issue is caused by the float:left of the <p> preceding the <table> that has the page contents. IV Other Browsers: IE7: ok FF3: ok V Nightly tested: 46809 Bug in Chromium : http://code.google.com/p/chromium/issues/detail?id=17770
Attachments
reduced testcase (268 bytes, text/html)
2009-08-05 17:09 PDT, jasneet
no flags
Patch (5.65 KB, patch)
2012-10-29 04:30 PDT, Robert Hogan
no flags
Patch (6.66 KB, patch)
2012-12-02 06:20 PST, Robert Hogan
no flags
Robert Hogan
Comment 1 2012-10-29 04:30:58 PDT
Eric Seidel (no email)
Comment 2 2012-10-29 11:25:50 PDT
Comment on attachment 171203 [details] Patch I assume you confirmed our behavior with FF and other browsers?
Robert Hogan
Comment 3 2012-12-02 06:20:24 PST
WebKit Review Bot
Comment 4 2012-12-02 09:26:11 PST
Comment on attachment 177139 [details] Patch Clearing flags on attachment: 177139 Committed r136347: <http://trac.webkit.org/changeset/136347>
WebKit Review Bot
Comment 5 2012-12-02 09:26:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.